asm-egress-gateway/team-x/team-x-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "team-x"
  labels:
    team: "team-x"
    istio.io/rev: asm-1145-8
